--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "node-fetch": "^2.6.0",
+    "ramda": "^0.27.0",
     "ts-node": "^8.7.0",
     "typescript": "^3.8.3",
     "yargs": "^15.3.1"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^13.9.2",
     "@types/node-fetch": "^2.5.5",
+    "@types/ramda": "^0.27.0",
     "@types/yargs": "^15.0.4",
     "tslint": "^6.1.0"
   }
