--- a/package.json
+++ b/package.json
@@ -5,21 +5,24 @@
   "license": "UNLICENSED",
   "scripts": {
     "start": "ts-node ./src/index.ts",
-    "lint": "tslint --fix \"src/**/*.ts\""
+    "lint": "tslint --fix \"src/**/*.ts\"",
+    "test": "mocha \"src/**/*.spec.ts\""
   },
   "dependencies": {
     "dotenv": "^8.2.0",
     "node-fetch": "^2.6.0",
     "ramda": "^0.27.0",
-    "ts-node": "^8.7.0",
+    "ts-node": "^8.8.1",
     "typescript": "^3.8.3",
     "yargs": "^15.3.1"
   },
   "devDependencies": {
-    "@types/node": "^13.9.2",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^12.12.31",
     "@types/node-fetch": "^2.5.5",
     "@types/ramda": "^0.27.0",
     "@types/yargs": "^15.0.4",
+    "mocha": "^7.1.1",
     "tslint": "^6.1.0"
   }
 }
